--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Bench BnB</title>
   <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700,900', 'application', media: 'all' %>
+  <%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?key=AIzaSyBvkbhIrfyjG2aj69lOjR91hpGwiYIOYoA' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
